--- a/admin.html
+++ b/admin.html
@@ -2,27 +2,27 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Vexinq Admin Paneli</title>
+  <title>Vexinq Admin Giriş</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
+      background-color: #f4f4f4;
       margin: 0;
+      padding: 0;
+    }
+
+    .login-container, .panel-container {
+      max-width: 500px;
+      margin: 100px auto;
+      background-color: white;
       padding: 30px;
-    }
-
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      background: white;
-      padding: 25px;
-      border: 1px solid #ccc;
       border-radius: 6px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      color: #007BFF;
     }
 
     label {
@@ -31,22 +31,22 @@
       font-weight: bold;
     }
 
-    textarea, input, select {
+    input, textarea, select {
       width: 100%;
       padding: 10px;
-      font-size: 14px;
       margin-top: 5px;
-      border: 1px solid #aaa;
       border-radius: 4px;
+      border: 1px solid #ccc;
     }
 
     .btn {
       margin-top: 30px;
+      width: 100%;
       background-color: #007BFF;
       color: white;
-      padding: 12px 24px;
+      padding: 12px;
       border: none;
-      border-radius: 5px;
+      border-radius: 4px;
       font-weight: bold;
       cursor: pointer;
     }
@@ -55,94 +55,82 @@
       background-color: #0056b3;
     }
 
-    .footer {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 12px;
-      color: #666;
-    }
-
-    .section {
-      margin-bottom: 30px;
+    .hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
 
-  <h1>Vexinq Admin Paneli</h1>
+  <!-- GİRİŞ FORMU -->
+  <div class="login-container" id="loginBox">
+    <h2>Yönetici Girişi</h2>
+    <label for="username">Kullanıcı Adı</label>
+    <input type="text" id="username" placeholder="Kullanıcı adı">
 
-  <div class="container">
-    
-    <div class="section">
-      <label for="about">Hakkımızda Metni</label>
-      <textarea id="about" rows="5">Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak amacıyla geliştirilen gelişmiş bir bot sistemidir. Kullanıcı odaklı tasarımı, modüler altyapısı ve sürekli güncellenen yapısı ile sunucular için en iyi yardımcıyı sunar.</textarea>
-    </div>
+    <label for="password">Şifre</label>
+    <input type="password" id="password" placeholder="Şifre">
 
-    <div class="section">
-      <label for="features">Özellikler (Her satıra bir özellik yaz)</label>
-      <textarea id="features" rows="6">
-🏗️ Otomatik Sunucu Kurulumu
-🔨 Gelişmiş Moderasyon Sistemi
-🛡️ Güçlü Koruma ve Anti-Raid
-🧰 Kayıt, Stat ve Davet Takip Sistemleri
-🎉 Eğlence ve Bilgi Komutları
-      </textarea>
-    </div>
-
-    <div class="section">
-      <label for="theme">Varsayılan Tema Rengi</label>
-      <select id="theme">
-        <option value="blue" selected>Mavi</option>
-        <option value="red">Kırmızı</option>
-        <option value="green">Yeşil</option>
-        <option value="purple">Mor</option>
-        <option value="orange">Turuncu</option>
-        <option value="black">Siyah</option>
-      </select>
-    </div>
-
-    <div class="section">
-      <label for="botInvite">Bot Davet Linki</label>
-      <input type="text" id="botInvite" value="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot">
-    </div>
-
-    <div class="section">
-      <label for="support1">Destek Sunucu Linki 1 (Vexinq)</label>
-      <input type="text" id="support1" value="https://discord.gg/qvZBKEUCQy">
-    </div>
-
-    <div class="section">
-      <label for="support2">Destek Sunucu Linki 2 (ZenixCore)</label>
-      <input type="text" id="support2" value="https://discord.gg/MKq4UsRNMS">
-    </div>
-
-    <div class="section">
-      <label for="loginText">Giriş Buton Yazısı</label>
-      <input type="text" id="loginText" value="Giriş Yap">
-    </div>
-
-    <button class="btn" onclick="savePanel()">Kaydet</button>
+    <button class="btn" onclick="login()">Giriş Yap</button>
   </div>
 
-  <div class="footer">
-    &copy; 2025 Vexinq Panel. Tüm hakları saklıdır.
+  <!-- PANEL -->
+  <div class="panel-container hidden" id="panelBox">
+    <h2>Vexinq Admin Paneli</h2>
+
+    <label>Hakkımızda</label>
+    <textarea rows="5" id="about">Vexinq, 2023 yılında Discord toplulukları için geliştirildi...</textarea>
+
+    <label>Özellikler</label>
+    <textarea rows="5" id="features">🎉 Eğlence\n🛡️ Koruma\n🔨 Moderasyon</textarea>
+
+    <label>Bot Davet Linki</label>
+    <input type="text" id="botLink" value="https://discord.com/oauth2/...">
+
+    <label>Destek Linki 1</label>
+    <input type="text" id="support1" value="https://discord.gg/qvZBKEUCQy">
+
+    <label>Destek Linki 2</label>
+    <input type="text" id="support2" value="https://discord.gg/MKq4UsRNMS">
+
+    <label>Tema Rengi</label>
+    <select id="theme">
+      <option value="blue">Mavi</option>
+      <option value="red">Kırmızı</option>
+      <option value="green">Yeşil</option>
+      <option value="purple">Mor</option>
+      <option value="orange">Turuncu</option>
+      <option value="black">Siyah</option>
+    </select>
+
+    <button class="btn" onclick="saveSettings()">Kaydet</button>
   </div>
 
   <script>
-    function savePanel() {
+    function login() {
+      const u = document.getElementById("username").value;
+      const p = document.getElementById("password").value;
+
+      if (u === "dcvexarithul" && p === "123") {
+        document.getElementById("loginBox").classList.add("hidden");
+        document.getElementById("panelBox").classList.remove("hidden");
+      } else {
+        alert("❌ Hatalı kullanıcı adı veya şifre.");
+      }
+    }
+
+    function saveSettings() {
       const data = {
         about: document.getElementById("about").value,
         features: document.getElementById("features").value,
-        theme: document.getElementById("theme").value,
-        botInvite: document.getElementById("botInvite").value,
+        botLink: document.getElementById("botLink").value,
         support1: document.getElementById("support1").value,
         support2: document.getElementById("support2").value,
-        loginText: document.getElementById("loginText").value,
+        theme: document.getElementById("theme").value
       };
 
-      alert("✅ Kaydedildi:\n\n" + JSON.stringify(data, null, 2));
-      // Gerçek backend'e gönderim yapılabilir
-      // örn: fetch('/save', { method: 'POST', body: JSON.stringify(data) })
+      alert("✅ Ayarlar kaydedildi:\n\n" + JSON.stringify(data, null, 2));
+      // Buradan gerçek kayıt sistemine bağlanabilirsin.
     }
   </script>
 
