--- a/admin.html
+++ b/admin.html
@@ -2,137 +2,247 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Vexinq Admin Giriş</title>
+  <title>Vexarithul Admin Paneli</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      font-family: 'Arial', sans-serif;
       margin: 0;
-      padding: 0;
+      background-color: #f4faff;
     }
 
-    .login-container, .panel-container {
-      max-width: 500px;
-      margin: 100px auto;
+    .container {
+      max-width: 700px;
+      margin: 60px auto;
       background-color: white;
       padding: 30px;
-      border-radius: 6px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
 
     h2 {
-      text-align: center;
       color: #007BFF;
+      text-align: center;
+      margin-bottom: 30px;
     }
 
     label {
+      font-weight: bold;
       display: block;
       margin-top: 20px;
-      font-weight: bold;
     }
 
-    input, textarea, select {
+    input[type="text"], input[type="password"], textarea, select {
       width: 100%;
       padding: 10px;
       margin-top: 5px;
-      border-radius: 4px;
+      border-radius: 6px;
       border: 1px solid #ccc;
     }
 
-    .btn {
-      margin-top: 30px;
-      width: 100%;
+    button {
+      margin-top: 20px;
       background-color: #007BFF;
       color: white;
-      padding: 12px;
+      padding: 12px 20px;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       font-weight: bold;
       cursor: pointer;
     }
 
-    .btn:hover {
+    button:hover {
       background-color: #0056b3;
     }
 
     .hidden {
       display: none;
     }
+
+    .feature-list, .support-list {
+      margin-top: 10px;
+      padding-left: 20px;
+    }
+
+    .feature-item, .support-item {
+      margin-bottom: 5px;
+    }
+
+    .danger {
+      background-color: #dc3545;
+    }
+
+    .danger:hover {
+      background-color: #a61d2d;
+    }
+
+    .input-inline {
+      display: flex;
+      gap: 10px;
+    }
+
+    .input-inline input {
+      flex: 1;
+    }
+
+    .section-divider {
+      margin-top: 40px;
+      border-top: 1px solid #ccc;
+      padding-top: 30px;
+    }
   </style>
 </head>
 <body>
 
-  <!-- GİRİŞ FORMU -->
-  <div class="login-container" id="loginBox">
-    <h2>Yönetici Girişi</h2>
-    <label for="username">Kullanıcı Adı</label>
-    <input type="text" id="username" placeholder="Kullanıcı adı">
+<div class="container" id="loginBox">
+  <h2>Admin Giriş</h2>
+  <label>Kullanıcı Adı</label>
+  <input type="text" id="username">
 
-    <label for="password">Şifre</label>
-    <input type="password" id="password" placeholder="Şifre">
+  <label>Şifre</label>
+  <input type="password" id="password">
 
-    <button class="btn" onclick="login()">Giriş Yap</button>
+  <button onclick="login()">Giriş Yap</button>
+</div>
+
+<div class="container hidden" id="adminBox">
+  <h2>Vexinq Admin Paneli</h2>
+
+  <label>Hakkımızda</label>
+  <textarea id="about" rows="4">Vexinq, 2023 yılında Discord toplulukları için geliştirildi...</textarea>
+
+  <label>Özellikler</label>
+  <div class="input-inline">
+    <input type="text" id="newFeature" placeholder="Yeni özellik gir...">
+    <button onclick="addFeature()">Ekle</button>
+  </div>
+  <ul class="feature-list" id="featureList"></ul>
+
+  <label>Destek Sunucuları</label>
+  <div class="input-inline">
+    <input type="text" id="newSupport" placeholder="https://discord.gg/...">
+    <button onclick="addSupport()">Ekle</button>
+  </div>
+  <ul class="support-list" id="supportList"></ul>
+
+  <label>Tema Rengi</label>
+  <select id="theme">
+    <option value="blue">Mavi</option>
+    <option value="red">Kırmızı</option>
+    <option value="green">Yeşil</option>
+    <option value="purple">Mor</option>
+    <option value="orange">Turuncu</option>
+    <option value="black">Siyah</option>
+  </select>
+
+  <div class="section-divider">
+    <h2>Yeni Admin Ekle</h2>
+    <label>Yeni Admin Kullanıcı Adı</label>
+    <input type="text" id="newAdminUsername">
+
+    <label>Yeni Admin Şifresi</label>
+    <input type="password" id="newAdminPassword">
+
+    <button onclick="addAdmin()">Admin Hesabı Ekle</button>
   </div>
 
-  <!-- PANEL -->
-  <div class="panel-container hidden" id="panelBox">
-    <h2>Vexinq Admin Paneli</h2>
+  <button onclick="save()">Kaydet</button>
+</div>
 
-    <label>Hakkımızda</label>
-    <textarea rows="5" id="about">Vexinq, 2023 yılında Discord toplulukları için geliştirildi...</textarea>
+<script>
+  let admins = [
+    { username: "dcvexarithul", password: "123" }
+  ];
 
-    <label>Özellikler</label>
-    <textarea rows="5" id="features">🎉 Eğlence\n🛡️ Koruma\n🔨 Moderasyon</textarea>
+  const features = ['🛡️ Güçlü Koruma', '🎉 Eğlence Komutları'];
+  const supports = ['https://discord.gg/qvZBKEUCQy', 'https://discord.gg/MKq4UsRNMS'];
 
-    <label>Bot Davet Linki</label>
-    <input type="text" id="botLink" value="https://discord.com/oauth2/...">
-
-    <label>Destek Linki 1</label>
-    <input type="text" id="support1" value="https://discord.gg/qvZBKEUCQy">
-
-    <label>Destek Linki 2</label>
-    <input type="text" id="support2" value="https://discord.gg/MKq4UsRNMS">
-
-    <label>Tema Rengi</label>
-    <select id="theme">
-      <option value="blue">Mavi</option>
-      <option value="red">Kırmızı</option>
-      <option value="green">Yeşil</option>
-      <option value="purple">Mor</option>
-      <option value="orange">Turuncu</option>
-      <option value="black">Siyah</option>
-    </select>
-
-    <button class="btn" onclick="saveSettings()">Kaydet</button>
-  </div>
-
-  <script>
-    function login() {
-      const u = document.getElementById("username").value;
-      const p = document.getElementById("password").value;
-
-      if (u === "dcvexarithul" && p === "123") {
-        document.getElementById("loginBox").classList.add("hidden");
-        document.getElementById("panelBox").classList.remove("hidden");
-      } else {
-        alert("❌ Hatalı kullanıcı adı veya şifre.");
-      }
+  function login() {
+    const user = document.getElementById("username").value;
+    const pass = document.getElementById("password").value;
+    const valid = admins.find(a => a.username === user && a.password === pass);
+    if (valid) {
+      document.getElementById("loginBox").classList.add("hidden");
+      document.getElementById("adminBox").classList.remove("hidden");
+      renderLists();
+    } else {
+      alert("❌ Hatalı kullanıcı adı veya şifre.");
     }
+  }
 
-    function saveSettings() {
-      const data = {
-        about: document.getElementById("about").value,
-        features: document.getElementById("features").value,
-        botLink: document.getElementById("botLink").value,
-        support1: document.getElementById("support1").value,
-        support2: document.getElementById("support2").value,
-        theme: document.getElementById("theme").value
-      };
+  function renderLists() {
+    const fList = document.getElementById("featureList");
+    const sList = document.getElementById("supportList");
+    fList.innerHTML = "";
+    sList.innerHTML = "";
 
-      alert("✅ Ayarlar kaydedildi:\n\n" + JSON.stringify(data, null, 2));
-      // Buradan gerçek kayıt sistemine bağlanabilirsin.
+    features.forEach((f, i) => {
+      const li = document.createElement("li");
+      li.className = "feature-item";
+      li.innerHTML = `${f} <button class="danger" onclick="removeFeature(${i})">Sil</button>`;
+      fList.appendChild(li);
+    });
+
+    supports.forEach((s, i) => {
+      const li = document.createElement("li");
+      li.className = "support-item";
+      li.innerHTML = `${s} <button class="danger" onclick="removeSupport(${i})">Sil</button>`;
+      sList.appendChild(li);
+    });
+  }
+
+  function addFeature() {
+    const val = document.getElementById("newFeature").value.trim();
+    if (val) {
+      features.push(val);
+      document.getElementById("newFeature").value = "";
+      renderLists();
     }
-  </script>
+  }
+
+  function removeFeature(i) {
+    features.splice(i, 1);
+    renderLists();
+  }
+
+  function addSupport() {
+    const val = document.getElementById("newSupport").value.trim();
+    if (val.startsWith("http")) {
+      supports.push(val);
+      document.getElementById("newSupport").value = "";
+      renderLists();
+    }
+  }
+
+  function removeSupport(i) {
+    supports.splice(i, 1);
+    renderLists();
+  }
+
+  function addAdmin() {
+    const user = document.getElementById("newAdminUsername").value.trim();
+    const pass = document.getElementById("newAdminPassword").value.trim();
+    if (user && pass) {
+      admins.push({ username: user, password: pass });
+      alert(`✅ Yeni admin eklendi: ${user}`);
+      document.getElementById("newAdminUsername").value = "";
+      document.getElementById("newAdminPassword").value = "";
+    } else {
+      alert("⚠️ Lütfen tüm alanları doldurun.");
+    }
+  }
+
+  function save() {
+    const data = {
+      about: document.getElementById("about").value,
+      features,
+      supports,
+      theme: document.getElementById("theme").value,
+      admins
+    };
+    alert("✅ Ayarlar kaydedildi!\n\n" + JSON.stringify(data, null, 2));
+    // Veritabanına entegre etmek istersen buraya fetch POST koyabilirsin.
+  }
+</script>
 
 </body>
 </html>
