--- a/index.html
+++ b/index.html
@@ -6,23 +6,17 @@
   <title>Vexinq Discord Botu</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --main-color: #007BFF;
-      --hover-color: #0056b3;
-      --background-color: #f4faff;
-    }
-
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: var(--background-color);
+      background-color: #f4faff;
       color: #333;
       scroll-behavior: smooth;
     }
 
     header {
-      background-color: var(--main-color);
+      background-color: #007BFF;
       padding: 20px 40px;
       display: flex;
       justify-content: space-between;
@@ -56,7 +50,7 @@
 
     .invite-btn {
       background-color: white;
-      color: var(--main-color) !important;
+      color: #007BFF !important;
       padding: 8px 16px;
       border-radius: 6px;
       font-weight: 600;
@@ -64,12 +58,12 @@
     }
 
     .invite-btn:hover {
-      background-color: var(--hover-color);
+      background-color: #0056b3;
       color: white !important;
     }
 
     .hero {
-      background: linear-gradient(to right, var(--main-color), var(--hover-color));
+      background: linear-gradient(to right, #007BFF, #0D6EFD);
       color: white;
       text-align: center;
       padding: 80px 20px;
@@ -90,7 +84,7 @@
       display: inline-block;
       padding: 12px 24px;
       background-color: white;
-      color: var(--main-color);
+      color: #007BFF;
       border-radius: 6px;
       font-weight: bold;
       text-decoration: none;
@@ -98,7 +92,7 @@
     }
 
     .cta:hover {
-      background-color: var(--hover-color);
+      background-color: #0056b3;
       color: white;
     }
 
@@ -112,7 +106,7 @@
     .section h2 {
       text-align: center;
       font-size: 32px;
-      color: var(--main-color);
+      color: #007BFF;
       margin-bottom: 20px;
     }
 
@@ -121,19 +115,20 @@
     }
 
     footer {
-      background-color: var(--hover-color);
+      background-color: #0D6EFD;
       color: white;
       text-align: center;
       padding: 20px;
       margin-top: 40px;
     }
 
+    /* Support Box */
     .support-box {
       position: fixed;
       bottom: 20px;
       right: 20px;
       background-color: #ffffff;
-      border-left: 5px solid var(--main-color);
+      border-left: 5px solid #007BFF;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0,0,0,0.15);
@@ -144,7 +139,7 @@
 
     .support-box h1 {
       font-size: 18px;
-      color: var(--main-color);
+      color: #007BFF;
       margin-bottom: 10px;
     }
 
@@ -155,7 +150,7 @@
     }
 
     .btn {
-      background-color: var(--main-color);
+      background-color: #007BFF;
       color: white;
       padding: 8px 16px;
       text-decoration: none;
@@ -167,26 +162,7 @@
     }
 
     .btn:hover {
-      background-color: var(--hover-color);
-    }
-
-    /* Admin Giriş Butonu */
-    .admin-login {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      background-color: var(--main-color);
-      color: white;
-      padding: 8px 14px;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.3s;
-      z-index: 1001;
-    }
-
-    .admin-login:hover {
-      background-color: var(--hover-color);
+      background-color: #0056b3;
     }
 
     @keyframes fadeIn {
@@ -228,18 +204,6 @@
   <section id="about" class="section">
     <h2>Hakkımızda</h2>
     <p>Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak amacıyla geliştirilen gelişmiş bir bot sistemidir. Kullanıcı odaklı tasarımı, modüler altyapısı ve sürekli güncellenen yapısı ile sunucular için en iyi yardımcıyı sunar.</p>
-
-    <div style="text-align:center; margin-top:30px;">
-      <label for="theme"><strong>🎨 Tema Seçin:</strong></label>
-      <select id="theme" onchange="changeTheme(this.value)" style="padding:8px 12px; border-radius:6px; border:1px solid #ccc;">
-        <option value="blue">Mavi</option>
-        <option value="red">Kırmızı</option>
-        <option value="green">Yeşil</option>
-        <option value="purple">Mor</option>
-        <option value="orange">Turuncu</option>
-        <option value="black">Siyah</option>
-      </select>
-    </div>
   </section>
 
   <section id="features" class="section">
@@ -267,53 +231,8 @@
     <p>7/24 destek için bize ulaşabilirsiniz.</p>
     <a class="btn" href="https://discord.gg/qvZBKEUCQy" target="_blank">Vexinq</a>
     <a class="btn" href="https://discord.gg/MKq4UsRNMS" target="_blank">ZenixCore</a>
+    <!-- Giriş Yap butonu kaldırıldı -->
   </div>
-
-  <div class="admin-login" onclick="adminLogin()">Giriş Yap</div>
-
-  <script>
-    function changeTheme(theme) {
-      const root = document.documentElement;
-      switch(theme) {
-        case 'red':
-          root.style.setProperty('--main-color', '#DC3545');
-          root.style.setProperty('--hover-color', '#a71d2a');
-          break;
-        case 'green':
-          root.style.setProperty('--main-color', '#28a745');
-          root.style.setProperty('--hover-color', '#1c7430');
-          break;
-        case 'purple':
-          root.style.setProperty('--main-color', '#6f42c1');
-          root.style.setProperty('--hover-color', '#4e2a91');
-          break;
-        case 'orange':
-          root.style.setProperty('--main-color', '#fd7e14');
-          root.style.setProperty('--hover-color', '#c75a02');
-          break;
-        case 'black':
-          root.style.setProperty('--main-color', '#343a40');
-          root.style.setProperty('--hover-color', '#1d2124');
-          break;
-        default:
-          root.style.setProperty('--main-color', '#007BFF');
-          root.style.setProperty('--hover-color', '#0056b3');
-      }
-    }
-
-    function adminLogin() {
-      const username = prompt("Kullanıcı Adı:");
-      const password = prompt("Şifre:");
-
-      if (username === "dcvexarithul" && password === "123") {
-        alert("✅ Başarıyla giriş yapıldı!");
-        // Admin paneline yönlendirme yapılabilir.
-        // window.location.href = "admin.html";
-      } else {
-        alert("❌ Hatalı kullanıcı adı veya şifre!");
-      }
-    }
-  </script>
 
 </body>
 </html>
