--- a/admin.html
+++ b/admin.html
@@ -153,6 +153,11 @@
     { username: "dcvexarithul", password: "123" }
   ];
 
+<script>
+  let admins = [
+    { username: "emre", password: "123" }
+  ];
+
   const features = ['🛡️ Güçlü Koruma', '🎉 Eğlence Komutları'];
   const supports = ['https://discord.gg/qvZBKEUCQy', 'https://discord.gg/MKq4UsRNMS'];
 
