--- a/admin.html
+++ b/admin.html
@@ -2,189 +2,160 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vexinq Admin Paneli</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
+    }
+    body {
       margin: 0;
-      padding: 0;
-      background-color: #f4faff;
+      background: #f0f4ff;
       color: #333;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
     }
-
-    .container {
-      max-width: 600px;
-      margin: 80px auto 40px;
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      flex: 1;
-    }
-
-    h1 {
+    header {
+      background: #007BFF;
+      padding: 20px;
+      color: white;
       text-align: center;
+      font-size: 24px;
+      font-weight: 600;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .container {
+      max-width: 900px;
+      margin: 30px auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    h2 {
       color: #007BFF;
     }
-
-    input, button {
+    input, textarea, select {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
       border-radius: 6px;
       border: 1px solid #ccc;
-      font-size: 16px;
+      font-size: 15px;
     }
-
     button {
-      background-color: #007BFF;
+      background: #007BFF;
       color: white;
-      font-weight: bold;
+      padding: 10px 16px;
       border: none;
+      border-radius: 6px;
+      font-weight: bold;
       cursor: pointer;
+      margin-top: 10px;
     }
-
     button:hover {
-      background-color: #0056b3;
+      background: #0056b3;
     }
-
-    .hidden {
-      display: none;
+    .section {
+      margin-top: 40px;
     }
-
-    .admin-list {
-      margin-top: 20px;
-      border-top: 1px solid #ddd;
-      padding-top: 10px;
-    }
-
-    .admin-item {
-      padding: 8px 0;
-      border-bottom: 1px dashed #ddd;
-    }
-
-    .logout {
-      margin-top: 20px;
-      background-color: #dc3545;
-    }
-
-    .logout:hover {
-      background-color: #c82333;
-    }
-
     footer {
       text-align: center;
-      padding: 15px;
+      padding: 20px;
       font-size: 14px;
-      color: #777;
-      background-color: #e6f0ff;
+      background: #e6f0ff;
+      color: #555;
+      margin-top: 40px;
     }
+    .admin-list div {
+      background: #f7f7f7;
+      padding: 8px;
+      margin: 5px 0;
+      border-left: 4px solid #007BFF;
+    }
+    #loginPanel {
+      max-width: 400px;
+      margin: 100px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
 
-  <!-- Giriş Ekranı -->
-  <div class="container" id="loginSection">
-    <h1>Admin Giriş</h1>
-    <input type="text" id="username" placeholder="Kullanıcı Adı">
-    <input type="password" id="password" placeholder="Şifre">
-    <button onclick="login()">Giriş Yap</button>
+<header>Vexinq Admin Paneli</header>
+
+<div id="loginPanel">
+  <h2>Giriş Yap</h2>
+  <input type="text" id="loginUser" placeholder="Kullanıcı Adı">
+  <input type="password" id="loginPass" placeholder="Şifre">
+  <button onclick="login()">Giriş Yap</button>
+</div>
+
+<div class="container hidden" id="adminPanel">
+
+  <h2>Site İçeriğini Düzenle</h2>
+  <div class="section">
+    <label>Logo İsmi</label>
+    <input type="text" id="logoName" value="Vexinq">
+
+    <label>Başlık</label>
+    <input type="text" id="heroTitle" value="Vexinq ile Sunucunuzu Güçlendirin">
+
+    <label>Açıklama</label>
+    <textarea id="heroDesc">Her gün yenilenen komutlar ve gelişmiş sistemlerle sunucunuzu bir adım öteye taşıyın.</textarea>
+
+    <label>Bot Davet Linki</label>
+    <input type="text" id="inviteLink" value="https://discord.com/oauth2/authorize?...">
+
+    <label>Hakkımızda</label>
+    <textarea id="aboutText">Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak amacıyla geliştirildi.</textarea>
   </div>
 
-  <!-- Admin Paneli -->
-  <div class="container hidden" id="adminPanel">
-    <h1>Admin Paneli</h1>
+  <div class="section">
+    <h2>Özellikler</h2>
+    <div id="featureList"></div>
+    <input type="text" id="newFeature" placeholder="Yeni özellik ekle">
+    <button onclick="addFeature()">Ekle</button>
+  </div>
 
-    <h3>Yeni Admin Ekle</h3>
-    <input type="text" id="newUsername" placeholder="Yeni kullanıcı adı">
-    <input type="password" id="newPassword" placeholder="Yeni şifre">
+  <div class="section">
+    <h2>Destek Sunucuları</h2>
+    <input type="text" id="support1" value="https://discord.gg/qvZBKEUCQy">
+    <input type="text" id="support2" value="https://discord.gg/MKq4UsRNMS">
+  </div>
+
+  <div class="section">
+    <h2>Renk Teması</h2>
+    <select id="themeColor">
+      <option value="#007BFF">Mavi</option>
+      <option value="#28a745">Yeşil</option>
+      <option value="#dc3545">Kırmızı</option>
+      <option value="#6f42c1">Mor</option>
+      <option value="#fd7e14">Turuncu</option>
+      <option value="#343a40">Siyah</option>
+    </select>
+  </div>
+
+  <div class="section">
+    <h2>Admin Yönetimi</h2>
+    <input type="text" id="newAdminUser" placeholder="Yeni Admin Kullanıcı Adı">
+    <input type="password" id="newAdminPass" placeholder="Yeni Admin Şifresi">
     <button onclick="addAdmin()">Admin Ekle</button>
-
     <div class="admin-list" id="adminList"></div>
-
-    <button class="logout" onclick="logout()">Çıkış Yap</button>
   </div>
 
-  <!-- Alt Bilgi -->
-  <footer>
-    Discord: Vexarithul | © 2025 Tüm Hakları Saklıdır
-  </footer>
+  <button onclick="logout()" style="background:#dc3545;">Çıkış Yap</button>
 
-  <script>
-    // Başlangıç adminleri
-    const defaultAdmins = [
-      { username: "dcvexarithul", password: "123" },
-      { username: "emre", password: "123" }
-    ];
+</div>
 
-    if (!localStorage.getItem("admins")) {
-      localStorage.setItem("admins", JSON.stringify(defaultAdmins));
-    }
+<footer>Discord: Vexarithul | © 2025 Tüm Hakları Saklıdır</footer>
 
-    function login() {
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value.trim();
-      const admins = JSON.parse(localStorage.getItem("admins")) || [];
+<script>
+// Devamı gelecek - JS işlevleri burada olacak
+</script>
 
-      const valid = admins.find(admin => admin.username === username && admin.password === password);
-      if (valid) {
-        localStorage.setItem("loggedIn", "true");
-        showPanel();
-      } else {
-        alert("Geçersiz kullanıcı adı veya şifre!");
-      }
-    }
-
-    function showPanel() {
-      document.getElementById("loginSection").classList.add("hidden");
-      document.getElementById("adminPanel").classList.remove("hidden");
-      renderAdmins();
-    }
-
-    function addAdmin() {
-      const newUsername = document.getElementById("newUsername").value.trim();
-      const newPassword = document.getElementById("newPassword").value.trim();
-      if (!newUsername || !newPassword) {
-        alert("Lütfen tüm alanları doldurun.");
-        return;
-      }
-
-      const admins = JSON.parse(localStorage.getItem("admins")) || [];
-      if (admins.find(a => a.username === newUsername)) {
-        alert("Bu kullanıcı zaten mevcut.");
-        return;
-      }
-
-      admins.push({ username: newUsername, password: newPassword });
-      localStorage.setItem("admins", JSON.stringify(admins));
-      renderAdmins();
-      document.getElementById("newUsername").value = '';
-      document.getElementById("newPassword").value = '';
-    }
-
-    function renderAdmins() {
-      const adminList = document.getElementById("adminList");
-      const admins = JSON.parse(localStorage.getItem("admins")) || [];
-      adminList.innerHTML = "<h3>Mevcut Adminler</h3>";
-      admins.forEach(admin => {
-        adminList.innerHTML += `<div class="admin-item">👤 ${admin.username}</div>`;
-      });
-    }
-
-    function logout() {
-      localStorage.removeItem("loggedIn");
-      location.reload();
-    }
-
-    // Otomatik panel gösterimi
-    window.onload = () => {
-      if (localStorage.getItem("loggedIn") === "true") {
-        showPanel();
-      }
-    }
-  </script>
 </body>
 </html>
